[package]
name = "waiua"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [
    "valorant_glz",
    "valorant_local",
    "valorant_other",
    "valorant_pd",
    "valorant_shared",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "waiua_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shaku = "0.6.2"
valorant_glz = { path = "./valorant_glz" }
valorant_local = { path = "./valorant_local" }
valorant_other = { path = "./valorant_other" }
valorant_pd = { path = "./valorant_pd" }
valorant_shared = { path = "./valorant_shared" }
anyhow = "1.0.92"
thiserror = "1.0.68"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
mockall = "0.13.0"
